samples/_failures_safe/1761799454_aab7a6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9ec5fd16.c: In function ‘main’:
./samples/SAFE/__tmp_9ec5fd16.c:152: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_9ec5fd16.c:151:9: error: expected declaration or statement at end of input
  151 |         if
      |         ^~
./samples/SAFE/__tmp_9ec5fd16.c:151:9: error: expected declaration or statement at end of input
